@@ -134,7 +134,7 @@ $(RPREFIX)-$(SUFF).exe: R.iss
 uuidgen.exe: uuidgen.o
 	$(CC) -o $@ $< -lole32
 
-# currently use about 4200
+# currently use about 3200
 uuids: uuidgen.exe
 	uuidgen 10000 > $@
 
@@ -142,7 +142,7 @@ files.wxs: imagedir fixups md5sums
 	"$(WIXDIR)/tallow" -1 -d $(RPREFIX) > $@
 
 R.wxs: WIXins.pl uuids files.wxs
-	$(PERL) WIXins.pl $(RPREFIX) $(RPREFIX)
+	$(PERL) WIXins.pl $(RPREFIX) $(RPREFIX) $(WIX_PERSONAL)
 
 ## To change compression with Wix 3.0 use
 ## light -dcl:high
